nuovo approc su content e aside tutto dentro row

--- a/sandbox.html
+++ b/sandbox.html
@@ -30,12 +30,18 @@
         <!-------      MAIN      --------->
 
         <main class="container-fluid  ms_debug-bg-color-light">
-            <aside class="row flex-column align-items-center h-100 ms_border-debug-red ms_debug-bg-color-dark">
-                <div class="col-2 ms_border-debug-white ms_debug-box-small">HOME</div>
-                <div class="col-2 ms_border-debug-white ms_debug-box-small">DATA</div>
-                <div class="col-2 ms_border-debug-white ms_debug-box-small">STATS</div>
-                
-            </aside>
+            <div class="row h-100">
+                <aside class="col-2 row flex-column align-items-center ms_border-debug-red ms_debug-bg-color-dark">
+                    <div class="col-2 ms_border-debug-white ms_debug-box-small">HOME</div>
+                    <div class="col-2 ms_border-debug-white ms_debug-box-small">DATA</div>
+                    <div class="col-2 ms_border-debug-white ms_debug-box-small">STATS</div>
+                    
+                </aside>
+
+                <div id="content" class="col-10 ms_border-debug-red ms_debug-bg-color-lighter">
+
+                </div>
+            </div>
         </main>
 
 
