fix su aside + creato #content thx dan tutor

--- a/sandbox.html
+++ b/sandbox.html
@@ -29,19 +29,15 @@
 
         <!-------      MAIN      --------->
 
-        <main class="container-fluid  ms_debug-bg-color-light">
-            <div class="row h-100">
-                <aside class="col-2 row flex-column align-items-center ms_border-debug-red ms_debug-bg-color-dark">
-                    <div class="col-2 ms_border-debug-white ms_debug-box-small">HOME</div>
-                    <div class="col-2 ms_border-debug-white ms_debug-box-small">DATA</div>
-                    <div class="col-2 ms_border-debug-white ms_debug-box-small">STATS</div>
-                    
-                </aside>
+        <main class="container-fluid d-flex p-0 ms_debug-bg-color-light">
 
-                <div id="content" class="col-10 ms_border-debug-red ms_debug-bg-color-lighter">
+            <aside class="h-100 ms_border-debug-red ms_debug-bg-color-dark">
+                <div class="ms_border-debug-white ms_debug-box-small">HOME</div>
+                <div class="ms_border-debug-white ms_debug-box-small">DATA</div>
+                <div class="ms_border-debug-white ms_debug-box-small">STATS</div>
+            </aside>
 
-                </div>
-            </div>
+            <div id="content" class="h-100"></div>
         </main>
 
 
