importo anche su index

--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
 
         <!-------      MAIN      --------->
 
-        <main class="container-fluid  ms_debug-bg-color-light">
-            <aside class="row flex-column align-items-center h-100 ms_border-debug-red ms_debug-bg-color-dark">
-                <div class="col-2 ms_border-debug-white ms_debug-box-small">HOME</div>
-                <div class="col-2 ms_border-debug-white ms_debug-box-small">DATA</div>
-                <div class="col-2 ms_border-debug-white ms_debug-box-small">STATS</div>
-                
+        <main class="container-fluid d-flex p-0 ms_debug-bg-color-light">
+
+            <aside class="h-100 ms_border-debug-red ms_debug-bg-color-dark">
+                <div class="ms_border-debug-white ms_debug-box-small">HOME</div>
+                <div class="ms_border-debug-white ms_debug-box-small">DATA</div>
+                <div class="ms_border-debug-white ms_debug-box-small">STATS</div>
             </aside>
+
+            <div id="content" class="h-100"></div>
         </main>
 
 
