--- a/sandbox.html
+++ b/sandbox.html
@@ -31,13 +31,21 @@
 
         <main class="container-fluid d-flex p-0 ms_debug-bg-color-light">
 
-            <aside class="h-100 ms_border-debug-red ms_debug-bg-color-dark">
+            <div id=aside class="h-100 ms_border-debug-red ms_debug-bg-color-dark">
                 <div class="ms_border-debug-white ms_debug-box-small">HOME</div>
                 <div class="ms_border-debug-white ms_debug-box-small">DATA</div>
                 <div class="ms_border-debug-white ms_debug-box-small">STATS</div>
-            </aside>
+                <div class="ms_border-debug-white ms_debug-box-small">SETTINGS</div>
+            </div>
 
-            <div id="content" class="h-100"></div>
+            <div id="content" class="container-fluid h-100">
+                <div id="content-top" class="row">
+                    <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">nuovo studente</div>
+                    <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">Boolean e Breadcrumb pills</div>
+                    <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">Studenti online e numero</div>
+                </div>
+
+            </div>
         </main>
 
 
