creato content con 2 colonne responsive

--- a/sandbox.html
+++ b/sandbox.html
@@ -38,11 +38,15 @@
                 <div class="ms_border-debug-white ms_debug-box-small">SETTINGS</div>
             </div>
 
-            <div id="content" class="container-fluid h-100">
-                <div id="content-top" class="row">
+            <div id="content" class="container-fluid h-100 overflow-y-auto">
+                <div id="content-top" class="row ms_debug-bg-color-light">
                     <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">nuovo studente</div>
                     <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">Boolean e Breadcrumb pills</div>
                     <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">Studenti online e numero</div>
+                </div>
+                <div id="content-body" class="row ms_debug-bg-color-pink">
+                    <div class="col-sm-12 col-md-6 ms_border-debug-red ms_debug-box-large">nuovo studente</div>
+                    <div class="col-sm-12 col-md-6 ms_border-debug-red ms_debug-box-large">Boolean e Breadcrumb pills</div>
                 </div>
 
             </div>
