creati cards layout responsive

--- a/sandbox.html
+++ b/sandbox.html
@@ -45,8 +45,15 @@
                     <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">Studenti online e numero</div>
                 </div>
                 <div id="content-body" class="row ms_debug-bg-color-pink">
-                    <div class="col-sm-12 col-md-6 ms_border-debug-red ms_debug-box-large">nuovo studente</div>
-                    <div class="col-sm-12 col-md-6 ms_border-debug-red ms_debug-box-large">Boolean e Breadcrumb pills</div>
+                    <div class="col-sm-12 col-md-6 ms_border-debug-red">
+                        <div class="ms_debug-box-large  ms_border-debug-white ms_debug-bg-color-dark">PROSSIME CLASSI</div>
+                        <div class="ms_debug-box-medium ms_border-debug-white ms_debug-bg-color-dark">ACCORDION</div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 ms_border-debug-red">
+                        <div class="ms_debug-box-large  ms_border-debug-white ms_debug-bg-color-dark">TO DO</div>
+                        <div class="ms_debug-box-medium ms_border-debug-white ms_debug-bg-color-dark">GRAFICO</div>
+                        <div class="ms_debug-box-medium ms_border-debug-white ms_debug-bg-color-dark">LISTA</div>
+                    </div>
                 </div>
 
             </div>
