trasporto tutto su index

--- a/index.html
+++ b/index.html
@@ -31,18 +31,29 @@
 
         <main class="container-fluid d-flex p-0 ms_debug-bg-color-light">
 
-            <div id=aside class="h-100 ms_border-debug-red ms_debug-bg-color-dark">
+            <div id=aside class="h-100 position-relative ms_border-debug-red ms_debug-bg-color-dark">
                 <div class="ms_border-debug-white ms_debug-box-small">HOME</div>
                 <div class="ms_border-debug-white ms_debug-box-small">DATA</div>
                 <div class="ms_border-debug-white ms_debug-box-small">STATS</div>
-                <div class="ms_border-debug-white ms_debug-box-small">SETTINGS</div>
+                <div class="position-absolute left-0 bottom-0 ms_border-debug-white ms_debug-box-small">SETTINGS</div>
             </div>
 
-            <div id="content" class="container-fluid h-100">
-                <div id="content-top" class="row">
+            <div id="content" class="container-fluid h-100 overflow-y-auto">
+                <div id="content-top" class="row ms_debug-bg-color-light">
                     <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">nuovo studente</div>
                     <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">Boolean e Breadcrumb pills</div>
                     <div class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">Studenti online e numero</div>
+                </div>
+                <div id="content-body" class="row ms_debug-bg-color-pink">
+                    <div class="col-sm-12 col-md-6 ms_border-debug-red">
+                        <div class="ms_debug-box-large  ms_border-debug-white ms_debug-bg-color-dark">PROSSIME CLASSI</div>
+                        <div class="ms_debug-box-medium ms_border-debug-white ms_debug-bg-color-dark">ACCORDION</div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 ms_border-debug-red">
+                        <div class="ms_debug-box-large  ms_border-debug-white ms_debug-bg-color-dark">TO DO</div>
+                        <div class="ms_debug-box-medium ms_border-debug-white ms_debug-bg-color-dark">GRAFICO</div>
+                        <div class="ms_debug-box-medium ms_border-debug-white ms_debug-bg-color-dark">LISTA</div>
+                    </div>
                 </div>
 
             </div>
