creata media query per responsive su aside

--- a/index.html
+++ b/index.html
@@ -32,10 +32,22 @@
         <main class="container-fluid d-flex p-0 ms_debug-bg-color-light">
 
             <div id=aside class="h-100 position-relative ms_border-debug-red ms_debug-bg-color-dark">
-                <div class="ms_border-debug-white ms_debug-box-small">HOME</div>
-                <div class="ms_border-debug-white ms_debug-box-small">DATA</div>
-                <div class="ms_border-debug-white ms_debug-box-small">STATS</div>
-                <div class="position-absolute left-0 bottom-0 ms_border-debug-white ms_debug-box-small">SETTINGS</div>
+                <div class="ms_border-debug-white ms_debug-box-small">
+                    <span>icona</span>
+                    <span class="ms_hidden">home</span>
+                </div>
+                <div class="ms_border-debug-white ms_debug-box-small">
+                    <span>icona</span>
+                    <span class="ms_hidden">stats</span>
+                </div>
+                <div class="ms_border-debug-white ms_debug-box-small">
+                    <span>icona</span>
+                    <span class="ms_hidden">signal</span>
+                </div>
+                <div class="position-absolute left-0 bottom-0 ms_border-debug-white ms_debug-box-small">
+                    <span>icona</span>
+                    <span class="ms_hidden">admin</span>
+                </div>
             </div>
 
             <div id="content" class="container-fluid h-100 overflow-y-auto">
