aside bar completata

--- a/index.html
+++ b/index.html
@@ -31,22 +31,38 @@
 
         <main class="container-fluid d-flex p-0 ms_debug-bg-color-light">
 
-            <div id=aside class="h-100 position-relative ms_border-debug-red ms_debug-bg-color-dark">
-                <div class="ms_border-debug-white ms_debug-box-small">
-                    <span>icona</span>
-                    <span class="ms_hidden">home</span>
+            <div id=aside class="h-100 position-relative">
+                <div class="p-2">
+                    <a class="text-decoration-none" href="">
+                        <span>
+                            <i class="fa-solid fa-house"></i>
+                        </span>
+                        <span class="ms_hidden">Home</span>
+                    </a>
                 </div>
-                <div class="ms_border-debug-white ms_debug-box-small">
-                    <span>icona</span>
-                    <span class="ms_hidden">stats</span>
+                <div class="p-2">
+                    <a class="text-decoration-none" href="">
+                        <span>
+                            <i class="fa-solid fa-chart-simple"></i>
+                        </span>
+                        <span class="ms_hidden">Stats</span>
+                    </a>
                 </div>
-                <div class="ms_border-debug-white ms_debug-box-small">
-                    <span>icona</span>
-                    <span class="ms_hidden">signal</span>
+                <div class="p-2">
+                    <a class="text-decoration-none" href="">
+                        <span>
+                            <i class="fa-solid fa-signal"></i>
+                        </span>
+                        <span class="ms_hidden">Signal</span>
+                    </a>
                 </div>
-                <div class="position-absolute left-0 bottom-0 ms_border-debug-white ms_debug-box-small">
-                    <span>icona</span>
-                    <span class="ms_hidden">admin</span>
+                <div class="position-absolute left-0 bottom-0 w-100 p-2">
+                    <a class="text-decoration-none" href="">
+                        <span>
+                            <i class="fa-solid fa-gear"></i>
+                        </span>
+                        <span class="ms_hidden">Admin</span>
+                    </a>
                 </div>
             </div>
 
