--- a/sandbox.html
+++ b/sandbox.html
@@ -17,16 +17,24 @@
             
             <div class="row">
 
-                <nav class="navbar py-3 bg-body-tertiary">
+                <nav class="navbar bg-body-tertiary">
                     <form class="container-fluid">
-                      <div class="input-group">
+                      <div class="input-group align-items-center">
                         <img id="ms_logo-boolean-mobile" class="" src="./img/mobile-logo.png" alt="mobile-logo" />
                         <img id="ms_logo-boolean" class="ms_hidden" src="./img/logo.svg" alt="logo" />
                         <input type="text" class="form-control" placeholder="Prova a cercare, lezioni di Laravel" aria-label="Username" aria-describedby="basic-addon1">
-                        <span class="ms_hidden ms_border-debug-red">icone</span>
-                        <span class="ms_hidden ms_border-debug-red">icone</span>
-                        <span class="ms_hidden ms_border-debug-red">icone</span>
-                        <span class="ms_border-debug-red">icone</span>
+                        <a href="#" class="ms_hidden  ">
+                            <i class="fa-solid fa-list-ul"></i>
+                        </a>
+                        <a href="#" class="ms_hidden  ">
+                            <i class="fa-solid fa-circle-question"></i>
+                        </a>
+                        <a href="#" class="ms_hidden  ">
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </a>
+                        <a href="#" class="   ">
+                            <i class="fa-solid fa-bell"></i>
+                        </a>
                       </div>
                     </form>
                   </nav>
