--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@
                             <a href="#" class="ms_hidden  ">
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </a>
-                            <a href="#" class="   ">
-                                <i class="fa-solid fa-bell"></i>
-                            </a>
-
+                            <div class="dropdown">
+                                <button class="btn border-0 px-0" data-bs-toggle="dropdown" type="button">
+                                    <i class="fa-solid fa-bell"></i>
+                                </button>
+                                <ul class="dropdown-menu dropdown-start border-0 rounded-0">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </div>
+                            
                         </div>
                     </form>
                   </nav>
@@ -96,7 +103,9 @@
 
             <div id="content" class="container-fluid h-100 overflow-y-auto">
                 <div id="content-top" class="row ms_debug-bg-color-light">
-                    <div id="content-top-1" class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">nuovo studente</div>
+                    <div id="content-top-1" class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">
+                        
+                    </div>
                     <div id="content-top-2" class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">Boolean e Breadcrumb pills</div>
                     <div id="content-top-3" class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">Studenti online e numero</div>
                 </div>
