ok #content-top-1

--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
 
             <div id="content" class="container-fluid h-100 overflow-y-auto">
                 <div id="content-top" class="row ms_debug-bg-color-light">
-                    <div id="content-top-1" class="col-sm-12 col-md-4 ms_border-debug-red ms_debug-box-medium">
+                    <div id="content-top-1" class="col-sm-12 col-md-4 text-end">
                         
+
+                        <span class="text-light">Nuovo Studente</span>
                         <!--        Offcanvas form          -->
                         <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas">
                             <i class="fa-solid fa-plus"></i>
