--- a/sandbox.html
+++ b/sandbox.html
@@ -249,13 +249,51 @@
                 </div>
                 <div id="content-body" class="row ms_debug-bg-color-pink">
                     <div class="col-sm-12 col-md-6 ms_border-debug-red">
-                        <div class="ms_debug-box-large  ms_border-debug-white ms_debug-bg-color-dark">PROSSIME CLASSI</div>
-                        <div class="ms_debug-box-medium ms_border-debug-white ms_debug-bg-color-dark">ACCORDION</div>
+                            <div class="card">
+                                <div class="card-header">
+                                  PROSSIME CLASSI
+                                </div>
+                                <div class="card-body">
+                                  <h5 class="card-title">Special title treatment</h5>
+                                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                              </div>
+                       
+
+                            <div class="card">
+                                <div class="card-header">
+                                  F.A.Q.
+                                </div>
+                                <div class="card-body">
+                                  <h5 class="card-title">Special title treatment</h5>
+                                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                              </div>
                     </div>
                     <div class="col-sm-12 col-md-6 ms_border-debug-red">
-                        <div class="ms_debug-box-large  ms_border-debug-white ms_debug-bg-color-dark">TO DO</div>
-                        <div class="ms_debug-box-medium ms_border-debug-white ms_debug-bg-color-dark">GRAFICO</div>
-                        <div class="ms_debug-box-medium ms_border-debug-white ms_debug-bg-color-dark">LISTA</div>
+                        <div class="card">
+                            <div class="card-header">
+                              Todo
+                            </div>
+                            <div class="card-body">
+                              <h5 class="card-title">Special title treatment</h5>
+                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>  
+
+                        <div class="card">
+                            <div class="card-header">
+                              GRAFICO
+                            </div>
+                            <div class="card-body">
+                              <h5 class="card-title">Special title treatment</h5>
+                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>                      
                     </div>
                 </div>
 
