--- a/sandbox.html
+++ b/sandbox.html
@@ -261,8 +261,12 @@
                                     <thead>
                                       <tr>
                                         <th scope="col">Nome</th>
-                                        <th class="ms_hidden-date" scope="col"><span>Data Inizio</span> </th>
-                                        <th class="ms_hidden-roi" scope="col">ROI</th>
+                                        <th scope="col">
+                                            <span class="ms_hidden-date">Data Inizio</span>
+                                        </th>
+                                        <th scope="col">
+                                            <span class="ms_hidden-roi">ROI</span>
+                                        </th>
                                         <th scope="col">Stato</th>
                                         <th scope="col">Azioni</th>
                                       </tr>
@@ -273,8 +277,12 @@
                                             <img src="./img/class-avatar - Copy.png" alt="class-avatar">
                                             <span class="fs-6 fw-normal">Classe 87</span>
                                         </th>
-                                        <td class="fs-6 fw-normal ms_hidden-date">15 Feb 2021</td>
-                                        <td class="fs-6 fw-normal ms_hidden-roi">20%</td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-date">15 Feb 2021</span>
+                                        </td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-roi">20%</span>
+                                        </td>
                                         <td class="fs-6 fw-normal">
                                             <span class="badge text-bg-success">Done</span>
                                         </td>
@@ -293,8 +301,12 @@
                                             <img src="./img/class-avatar - Copy.png" alt="class-avatar">
                                             <span class="fs-6 fw-normal">Classe 88</span>
                                         </th>
-                                        <td class="fs-6 fw-normal ms_hidden-date">16 Feb 2021</td>
-                                        <td class="fs-6 fw-normal ms_hidden-roi">28%</td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-date">16 Feb 2021</span>
+                                        </td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-roi">28%</span>
+                                        </td>
                                         <td class="fs-6 fw-normal">
                                             <span class="badge text-bg-danger">Fail</span>
                                         </td>
@@ -313,8 +325,12 @@
                                             <img src="./img/class-avatar - Copy.png" alt="class-avatar">
                                             <span class="fs-6 fw-normal">Classe 89</span>
                                         </th>
-                                        <td class="fs-6 fw-normal ms_hidden-date">17 Feb 2021</td>
-                                        <td class="fs-6 fw-normal ms_hidden-roi">10%</td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-date">17 Feb 2021</span>
+                                        </td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-roi">10%</span>
+                                        </td>
                                         <td class="fs-6 fw-normal">
                                             <span class="badge text-light text-bg-warning">Process</span>
                                         </td>
@@ -333,8 +349,12 @@
                                             <img src="./img/class-avatar - Copy.png" alt="class-avatar">
                                             <span class="fs-6 fw-normal">Classe 90</span>
                                         </th>
-                                        <td class="fs-6 fw-normal ms_hidden-date">18 Feb 2021</td>
-                                        <td class="fs-6 fw-normal ms_hidden-roi">20%</td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-date">18 Feb 2021</span>
+                                        </td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-roi">20%</span>
+                                        </td>
                                         <td class="fs-6 fw-normal">
                                             <span class="badge text-bg-success">Done</span>
                                         </td>
@@ -353,8 +373,12 @@
                                             <img src="./img/class-avatar - Copy.png" alt="class-avatar">
                                             <span class="fs-6 fw-normal">Classe 91</span>
                                         </th>
-                                        <td class="fs-6 fw-normal ms_hidden-date">19 Feb 2021</td>
-                                        <td class="fs-6 fw-normal ms_hidden-roi">22%</td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-date">19 Feb 2021</span>
+                                        </td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-roi">22%</span>
+                                        </td>
                                         <td class="fs-6 fw-normal">
                                             <span class="badge text-bg-danger">Fail</span>
                                         </td>
@@ -373,8 +397,12 @@
                                             <img src="./img/class-avatar - Copy.png" alt="class-avatar">
                                             <span class="fs-6 fw-normal">Classe 92</span>
                                         </th>
-                                        <td class="fs-6 fw-normal ms_hidden-date">20 Feb 2021</td>
-                                        <td class="fs-6 fw-normal ms_hidden-roi">20%</td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-date">20 Feb 2021</span>
+                                        </td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-roi">20%</span>
+                                        </td>
                                         <td class="fs-6 fw-normal">
                                             <span class="badge text-bg-success">Done</span>
                                         </td>
@@ -393,8 +421,12 @@
                                             <img src="./img/class-avatar - Copy.png" alt="class-avatar">
                                             <span class="fs-6 fw-normal">Classe 93</span>
                                         </th>
-                                        <td class="fs-6 fw-normal ms_hidden-date">21 Feb 2021</td>
-                                        <td class="fs-6 fw-normal ms_hidden-roi">20%</td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-date">21 Feb 2021</span>
+                                        </td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-roi">20%</span>
+                                        </td>
                                         <td class="fs-6 fw-normal">
                                             <span class="badge text-bg-success">Done</span>
                                         </td>
@@ -413,8 +445,12 @@
                                             <img src="./img/class-avatar - Copy.png" alt="class-avatar">
                                             <span class="fs-6 fw-normal">Classe 94</span>
                                         </th>
-                                        <td class="fs-6 fw-normal ms_hidden-date">24 Feb 2021</td>
-                                        <td class="fs-6 fw-normal ms_hidden-roi">20%</td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-date">24 Feb 2021</span>
+                                        </td>
+                                        <td class="fs-6 fw-normal">
+                                            <span class="ms_hidden-roi">20%</span>
+                                        </td>
                                         <td class="fs-6 fw-normal">
                                             <span class="badge text-light text-bg-warning">Process</span>
                                         </td>
