text-align start su offcanvas

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas">
                             <i class="fa-solid fa-plus"></i>
                         </button>
-                        <div id="offcanvas" class="offcanvas offcanvas-end">
+                        <div id="offcanvas" class="offcanvas offcanvas-end text-start">
 
                             <div class="offcanvas-header">
                                 <h5 class="offcanvas-title" id="offcanvasLabel">Inserisci un nuovo studente</h5>
