aggiunto simbolo su barra ricerca header. fine esercizio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                         <div class="input-group align-items-center">
                             <img id="ms_logo-boolean-mobile" class="" src="./img/mobile-logo.png" alt="mobile-logo" />
                             <img id="ms_logo-boolean" class="ms_hidden" src="./img/logo.svg" alt="logo" />
-                            <input type="text" class="form-control rounded-1" placeholder="&#xf002; Prova a cercare, lezioni di Laravel" aria-label="Username" aria-describedby="basic-addon1">
+                            <div id="search-symbol"class="input-group-text rounded rounded-end-0 border-0 me-0">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </div>
+                            <input id="search-bar" type="text" class="form-control rounded border-0 rounded-start-0" placeholder="Prova a cercare, lezioni di Laravel"  >
                             
                             <a href="#" class="ms_hidden  ">
                                 <i class="fa-solid fa-list-ul"></i>
